--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form [formGroup]="formulario" ngSubmit="submited()">
+      <form [formGroup]="formulario" (ngSubmit)="submited()">
         <div id="user-data">
           <div class="form-group">
             <label for="username">Username</label>
             <input formControlName = "vc_nome" type="text" id="username" class="form-control">
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
-          <div class="form-group" formGroup="email">
+          <div class="form-group" formGroupName="email">
             <label for="email">Mail</label>
-            <input formControlName="vc_email" type="email" id="email" class="form-control">
+            <input formControlName="vc_email" type="text" id="email" class="form-control">
             <input formControlName = "ch_checked" type="checkbox">
           </div>
         </div>
