--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -13,6 +13,10 @@
             <input formControlName="vc_email" type="text" id="email" class="form-control">
             <input formControlName = "ch_checked" type="checkbox">
           </div>
+          <div class="form-group">
+            <label for="teste">Teste Validando</label>
+            <input id="teste" type="text" formControlName="validate" class="form-control">
+          </div>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
