--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -1,22 +1,26 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-
       <form [formGroup]="formulario" (ngSubmit)="submited()">
         <div id="user-data">
-          <div class="form-group">
-            <label for="username">Username</label>
-            <input formControlName = "vc_nome" type="text" id="username" class="form-control">
-          </div>
-          <div class="form-group">
-            <label for="username">Email</label>
-            <input formControlName = "vc_email" type="text" id="username" class="form-control">
+          <div formArrayName = 'array'>
+            <div *ngFor="let control of formulario.get('array').controls; let i = index">
+              <div [formGroupName] = 'i'>
+                <div class="form-group">
+                  <label for="username">Username</label>
+                  <input formControlName = "vc_nome" type="text" id="username" class="form-control">
+                </div>
+                <div class="form-group">
+                  <label for="username">Email</label>
+                  <input formControlName = "vc_email" type="text" id="username" class="form-control">
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <button class="btn btn-primary" style="margin-right:10px" type="submit">Submit</button>
-        <button class="btn btn-success" type="button">Adicionar</button>
+        <button class="btn btn-success" type="button" (click)="addGroup()">Adicionar</button>
       </form>
-
     </div>
   </div>
 </div>
