--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -8,11 +8,13 @@
               <div [formGroupName] = 'i'>
                 <div class="form-group">
                   <label for="username">Username</label>
-                  <input formControlName = "vc_nome" type="text" id="username" class="form-control">
+                  <input formControlName = "vc_nome" type="text" id="username" class="form-control" [ngClass]="{'invalido': !formulario.get('array.'+i+'.vc_nome').valid && formulario.get('array.'+i+'.vc_nome').touched}">
+                  <span *ngIf="!formulario.get('array.'+i+'.vc_nome').valid && formulario.get('array.'+i+'.vc_nome').touched" style="color:red">Informe um nome</span>
                 </div>
                 <div class="form-group">
                   <label for="username">Email</label>
-                  <input formControlName = "vc_email" type="text" id="username" class="form-control">
+                  <input formControlName = "vc_email" type="text" id="username" class="form-control" [ngClass]="{'invalido': !formulario.get('array.'+i+'.vc_email').valid && formulario.get('array.'+i+'.vc_email').touched}">
+                  <span *ngIf="!formulario.get('array.'+i+'.vc_email').valid && formulario.get('array.'+i+'.vc_email').touched" style="color:red">Informe um e-mail válido</span>
                 </div>
               </div>
             </div>
