--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -15,6 +15,9 @@
                   <label for="username">Email</label>
                   <input formControlName = "vc_email" type="text" id="username" class="form-control" [ngClass]="{'invalido': !formulario.get('array.'+i+'.vc_email').valid && formulario.get('array.'+i+'.vc_email').touched}">
                   <span *ngIf="!formulario.get('array.'+i+'.vc_email').valid && formulario.get('array.'+i+'.vc_email').touched" style="color:red">Informe um e-mail válido</span>
+                  <div class="col-md-12 text-right" style="margin-top:10px">
+                  <button class="btn btn-danger" (click)="deleteGroup(i)">Deletar</button>
+                  </div>
                 </div>
               </div>
             </div>
