--- a/forms-td-start/src/app/mensagem/mensagem.component.css
+++ b/forms-td-start/src/app/mensagem/mensagem.component.css
@@ -1,4 +1,4 @@
-.mensagem{
+.mensagemErro{
 width: 200px;
 height: 100;
 background-color: red;
@@ -12,7 +12,7 @@ opacity: 0;
 padding:10px;
 }
 
-.mensagemAnimate{
+.mensagemAnimateErro{
 width: 200px;
 height: 100;
 background-color: red;
