--- a/forms-td-start/src/app/mensagem/mensagem.component.css
+++ b/forms-td-start/src/app/mensagem/mensagem.component.css
@@ -27,13 +27,31 @@ transition: 2000ms;
 padding:10px;
 }
 
-.botao{
+.mensagemEnviado{
+width: 200px;
+height: 100;
+background-color: green;
 position: absolute;
-bottom:0;right:2px;
-background-color: red;
-border:none
+right: 30%;
+top: 10%;
+color:white;
+z-index: 1;
+border-radius: 5px;
+opacity: 0;
+padding:10px;
 }
-
-.botao:hover{
-    font-size: 13pt;
+    
+.mensagemAnimateEnviado{
+width: 200px;
+height: 100;
+background-color: green;
+position: absolute;
+right: 30%;
+top: 15%;
+color:white;
+z-index: 1;
+border-radius: 5px;
+opacity: 1;
+transition: 2000ms;
+padding:10px;
 }
