--- a/forms-td-start/src/app/mensagem/mensagem.component.html
+++ b/forms-td-start/src/app/mensagem/mensagem.component.html
@@ -1,3 +1,7 @@
 <div *ngIf="showErro" [ngClass]="{'mensagemErro': classCssErro, 'mensagemAnimateErro': !classCssErro}">
-  Existem dados invalidos, cheque os parametros <button class="botao" (click)="showErro = false"> X </button>
+  Existem dados invalidos, cheque os parametros 
+</div>
+
+<div *ngIf="showEnviado" [ngClass]="{'mensagemEnviado': classCssEnviado, 'mensagemAnimateEnviado': !classCssEnviado, 'hidden': hidden}">
+  Dados enviados com sucesso
 </div>
