--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -5,10 +5,11 @@
 
         <app-select 
         [dados]='pessoas' 
-        [titulos]='["Nome","Idade"]'
-        [colunas]='["nome","idade"]'
+        [titulos]='["Nome"]'
+        [colunas]='["nome"]'
         idUnica='nome'
-        nome='nome'></app-select>
+        nome='nome'
+        filtrarPor='nome'></app-select>
         
       </div>
     </div>
