--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -7,6 +7,7 @@
         [dados]='pessoas' 
         [titulos]='["Nome"]'
         [colunas]='["nome"]'
+        intervalo='1000'
         idUnica='nome'
         nome='nome'
         filtrarPor='nome'></app-select>
