--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -5,9 +5,9 @@
 
         <app-select 
         [dados]='pessoas' 
-        [titulos]='["Nome"]'
-        [colunas]='["nome"]'
-        intervalo='1000'
+        [titulos]='["Nome","Idade"]'
+        [colunas]='["nome","idade"]'
+        intervalo='0'
         idUnica='nome'
         nome='nome'
         filtrarPor='nome'></app-select>
