--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -1,18 +1,20 @@
 <div style="margin-top:100px" class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="container">
 
         <app-select 
         [dados]='pessoas' 
         [titulos]='["Nome","Idade"]'
         [colunas]='["nome","idade"]'
-        intervalo='0'
         idUnica='nome'
         nome='nome'
         filtrarPor='nome'></app-select>
         
       </div>
+    </div>
+    <div class="col-md-6">
+        <button class="btn btn-success" (click)="enviar()">Enviar</button>
     </div>
   </div>
 </div>
