--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -5,9 +5,10 @@
 
         <app-select 
         [dados]='pessoas' 
-        [titulos]='["Nome","Idade"]'
-        [colunas]='["nome","idade"]'
+        [titulos]='["Nome"]'
+        [colunas]='["nome"]'
         [(valor)]="nome"
+        largura='200'
         idUnica='nome'
         nome='nome'
         filtrarPor='nome'></app-select>
