--- a/forms-td-start/src/app/select/select.component.html
+++ b/forms-td-start/src/app/select/select.component.html
@@ -1,20 +1,19 @@
-<div #table  [title]='value' class="tb" [class.border]="open" (click)="open = true">
+<div #table [ngStyle]="{'width': largura+'px'}" [title]='value' class="tb" [class.border]="open" (click)="open = true">
   <input [(ngModel)]="_filtro" (keyup)="filtro()" *ngIf="open"  class="form-control" style="margin-bottom:10px" type="text" placeholder="Pesquisar...">
   <input [(ngModel)]="value" style="pointer-events: none" *ngIf="!open"  class="form-control" readonly type="text">
-  <span title="Limpar pesquisa" class="x" *ngIf="open" (click)="_filtro = '';filtro()">Limpar...</span>
-  <div *ngIf="!open" class="squareDown"></div>
+  <div *ngIf="!open" [ngStyle]="{'left': largura-5+'px'}" class="squareDown"></div>
   <table *ngIf="open" class="table">
     <thead style="width: 100%;display: inline-table;">
-      <th *ngFor="let coluna of titulos"><u>{{coluna}}</u></th>
+      <th [ngStyle]="{'color': tituloCor}" *ngFor="let coluna of titulos"><u>{{coluna}}</u></th>
     </thead>
     <tbody *ngIf="!colunasEspecificadas" style="display: block;overflow-y: auto; max-height:200px">
       <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
-        <td style="width: 300px" *ngFor="let valor of valores">{{dado[valor]}}</td>
+        <td [ngStyle]="{'width': largura+'px'}" *ngFor="let valor of valores">{{dado[valor]}}</td>
       </tr>
     </tbody>
     <tbody *ngIf="colunasEspecificadas" style="display: block;overflow-y: auto; max-height:200px">
       <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
-        <td style="width: 300px" *ngFor="let coluna of colunas">{{dado[coluna]}}</td>
+        <td [ngStyle]="{'width': largura+'px'}" *ngFor="let coluna of colunas">{{dado[coluna]}}</td>
       </tr>
     </tbody>
   </table>
