--- a/forms-td-start/src/app/select/select.component.html
+++ b/forms-td-start/src/app/select/select.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="!open" [ngStyle]="{'left': largura-5+'px'}" class="squareDown"></div>
   <table *ngIf="open" class="table">
     <thead style="width: 100%;display: inline-table;">
-      <th [ngStyle]="{'color': tituloCor}" *ngFor="let coluna of titulos"><u>{{coluna}}</u></th>
+      <th *ngFor="let coluna of titulos"><u>{{coluna}}</u></th>
     </thead>
     <tbody *ngIf="!colunasEspecificadas" style="display: block;overflow-y: auto; max-height:200px">
       <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
