--- a/forms-td-start/src/app/select/select.component.css
+++ b/forms-td-start/src/app/select/select.component.css
@@ -19,6 +19,7 @@ tr:hover{
 }
 
 th,td{
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     text-align: center;
     padding:3px;
 }
