--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -5,7 +5,7 @@
 
         <app-select 
         [dados]='pessoas' 
-        [(valor)]="nome"
+        [(valor)]="id"
         [titulos]="['Id','Nome']"
         [colunas]="['sr_id','vc_nome']"
         ></app-select>
