--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -8,6 +8,7 @@
         [(valor)]="id"
         [titulos]="['Id','Nome']"
         [colunas]="['sr_id','vc_nome']"
+        [filtros]="['sr_id','vc_nome']"
         ></app-select>
         
       </div>
