--- a/forms-td-start/src/app/select/select.component.html
+++ b/forms-td-start/src/app/select/select.component.html
@@ -1,21 +1,23 @@
 <div #table [ngStyle]="{'width': largura+'px'}" [title]='value' class="tb" [class.border]="open" (click)="open = true">
-  <input [(ngModel)]="_filtro" (keyup)="filtro()" *ngIf="open"  class="form-control" style="margin-bottom:10px" type="text" placeholder="Pesquisar...">
-  <input [(ngModel)]="value" style="pointer-events: none" *ngIf="!open"  class="form-control" readonly type="text">
+  <input [(ngModel)]="_filtro" (keyup)="filtro()" *ngIf="open" class="form-control" style="margin-bottom:10px"
+    type="text" placeholder="Pesquisar...">
+  <input [(ngModel)]="value" style="pointer-events: none" *ngIf="!open" class="form-control" readonly type="text">
   <div *ngIf="!open" [ngStyle]="{'left': largura-5+'px'}" class="squareDown"></div>
   <div style="max-height: 200px;overflow: auto;">
-  <table style="width: 100%" *ngIf="open">
-    <thead>
-      <th style="color: grey" *ngFor="let coluna of titulos"><u>{{coluna}}</u></th>
-    </thead>
-    <tbody *ngIf="!colunasEspecificadas">
-      <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
-        <td *ngFor="let valor of valores">{{dado[valor]}}</td>
-      </tr>
-    </tbody>
-    <tbody *ngIf="colunasEspecificadas">
-      <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
-        <td *ngFor="let coluna of colunas">{{dado[coluna]}}</td>
-      </tr>
-    </tbody>
-  </table></div>
+    <table style="width: 100%" *ngIf="open">
+      <thead>
+        <th style="color: grey" *ngFor="let coluna of titulos"><u>{{coluna}}</u></th>
+      </thead>
+      <tbody *ngIf="!colunasEspecificadas">
+        <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
+          <td *ngFor="let valor of valores">{{dado[valor]}}</td>
+        </tr>
+      </tbody>
+      <tbody *ngIf="colunasEspecificadas">
+        <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
+          <td *ngFor="let coluna of colunas">{{dado[coluna]}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
