--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -9,6 +9,7 @@
         [titulos]="['Id','Nome']"
         [colunas]="['sr_id','vc_nome']"
         [filtros]="['sr_id','vc_nome']"
+        largura='250'
         ></app-select>
         
       </div>
