--- a/forms-td-start/src/app/select/select.component.html
+++ b/forms-td-start/src/app/select/select.component.html
@@ -9,12 +9,12 @@
   <div style="max-height: 200px;overflow: auto;">
     <table class="tabela" *ngIf="open">
       <tbody *ngIf="!colunasEspecificadas">
-        <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
+        <tr style="cursor: pointer" [ngStyle]="{'backgroundColor': dado.index%2==0?'rgba(128, 128, 128, 0.400)':none}" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
           <td [ngStyle]="{'width': largura/qtdColunas-10+'px'}" *ngFor="let valor of valores">{{dado[valor]}}</td>
         </tr>
       </tbody>
       <tbody *ngIf="colunasEspecificadas">
-        <tr style="cursor: pointer" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
+        <tr style="cursor: pointer" [ngStyle]="{'backgroundColor': dado.index%2==0?'rgba(128, 128, 128, 0.400)':none}" (click)='selecionar(dado)' *ngFor="let dado of filtrado">
           <td [ngStyle]="{'width': largura/qtdColunas-15+'px'}" *ngFor="let coluna of colunas">{{dado[coluna]}}</td>
         </tr>
       </tbody>
