--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -6,7 +6,7 @@
         <app-select 
         [dados]='pessoas' 
         [(valor)]="id"
-        [titulos]="['Id','Nome']"
+        [titulos]="['ID','Nome']"
         [colunas]="['sr_id','vc_nome']"
         [filtros]="['sr_id','vc_nome']"
         largura='250'
