--- a/forms-td-start/src/app/select/select.component.html
+++ b/forms-td-start/src/app/select/select.component.html
@@ -2,7 +2,7 @@
   <input [(ngModel)]="_filtro" (keyup)="filtro()" *ngIf="open" class="form-control" style="margin-bottom:10px"
     type="text" placeholder="Pesquisar...">
   <input [(ngModel)]="value" style="pointer-events: none" *ngIf="!open" class="form-control" readonly type="text">
-  <div *ngIf="!open" [ngStyle]="{'left': largura-5+'px'}" class="squareDown"></div>
+  <div  [ngStyle]="{'left': largura-5+'px'}" [ngClass]="{'squareDown': !open, 'squareUp': open}"></div>
   <div *ngIf="open">
     <th style=" border-bottom:solid 4px black;" [ngStyle]="{'width': largura/qtdTitulos+'px'}" *ngFor="let coluna of titulos">{{coluna}}</th>
   </div>
