--- a/forms-td-start/src/app/select/select.component.css
+++ b/forms-td-start/src/app/select/select.component.css
@@ -32,7 +32,7 @@ th{
 }
 
 .squareDown{
-    visibility: visible;
+    opacity: 1;
     pointer-events: none;
     content: " ";
     top: 45%;
@@ -40,21 +40,19 @@ th{
     border: 7px solid;
     border-color:grey transparent transparent transparent;
     cursor: pointer;
-    transform: rotate(0deg);
-    transition:all 300ms;
+    transition: 800ms;
+    position: absolute;
 }
 
 .squareUp{
-    visibility: hidden;
+    opacity: 0;
     pointer-events: none;
     content: " ";
     top: 45%;
     position: absolute;
     border: 7px solid;
-    border-color: transparent  transparent grey  transparent;
-    transform: rotate(250deg);
+    border-color:grey transparent transparent transparent;
     cursor: pointer;
-    transition:all 100ms;
 }
 
 .tabela{
