--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6">
       <div class="container">
 
-        <app-select 
+        <app-select #el1
         [dados]='pessoas' 
         [(valor)]="id"
         [titulos]="['ID','Nome']"
